# SubStudio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: cpsrenderer.cpp  cpsrenderer.h  main.cpp  mainwindow.cpp  mainwindow.h  substudio_edit_box.cpp  substudio_edit_box.h  substudio_textfmt.cpp  substudio_textfmt.h  substudio_time.cpp  substudio_time.h  substudiogrid.cpp  substudiogrid.h  subtitlemodel.cpp  subtitlemodel.h
